export class Colectivo {
    constructor(id, nombre, descripcion, ubicacion, tipo) {
        this.id = id;
        this.nombre = nombre;
        this.descripcion = descripcion;
        this.ubicacion = ubicacion;
        this.tipo = tipo;
    }
}