export class Habilidad {
    constructor(codigo, titulo, descripcion) {
        this.codigo = codigo;
        this.titulo = titulo;
        this.descripcion = descripcion;
    }
}